--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@fortawesome/fontawesome-free-regular": "^5.0.6",
     "@fortawesome/fontawesome-free-solid": "^5.0.6",
     "@fortawesome/react-fontawesome": "^0.0.17",
+    "apollo-boost": "^0.1.6",
+    "apollo-link-context": "^1.0.8",
+    "graphql": "^0.13.2",
     "prop-types": "^15.6.0",
     "react": "^16.3.2",
+    "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.1.4"
