--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "author": "Bo Slott",
   "license": "MIT",
+  "proxy": "http://localhost:3001/",
+  "description": "A web and mobile solution to tracking and organizing pool operator logs and data",
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -18,14 +20,18 @@
     "apollo-boost": "^0.1.6",
     "apollo-link-context": "^1.0.8",
     "graphql": "^0.13.2",
+    "node-sass-chokidar": "^1.3.0",
     "prop-types": "^15.6.0",
     "react": "^16.3.2",
     "react-apollo": "^2.1.4",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar --include-path ./src/Sass src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src/Sass src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
