--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apollo-boost": "^0.1.6",
     "apollo-link-context": "^1.0.8",
     "graphql": "^0.13.2",
+    "moment": "^2.22.1",
     "node-sass-chokidar": "^1.3.0",
     "prop-types": "^15.6.0",
     "react": "^16.3.2",
