--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.3.2",
     "react-apollo": "^2.1.4",
     "react-bootstrap": "^0.32.1",
+    "react-datepicker": "^1.5.0",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.1.4",
